<resources>
    <string name="app_name">AppEmpresaTI97</string>
    <string name="insira_seu_e_mail">Insira seu E-mail</string>
    <string name="insira_sua_senha">Insira sua senha</string>
    <string name="login">Login</string>
    <string name="recuperar_usu_rio_senha">Recuperar usuário/senha?</string>
    <string name="ou">__________ ou _________</string>
    <string name="cadastrar"><u>Cadastrar</u></string>
    <string name="insira_o_nome_do_usu_rio">Insira o nome do usuário</string>
    <string name="insira_o_email_do_usu_rio">Insira o email do usuário</string>
    <string name="insira_a_senha_do_usu_rio">Insira a senha do usuário</string>
    <string name="repetir_a_senha_do_usu_rio">Repetir a senha do usuário</string>
    <string name="cadastrar_usuario">Cadastrar</string>
    <string name="termo_de_uso"><u>Termo de uso</u></string>
    <string name="sair">Sair</string>
    <string name="temo_de_uso">1. ACEITAÇÃO
Este é um contrato firmado entre você, de agora em diante denominado como usuário, e a Webnow Tecnologia
Eireli, empresa cadastrada no CNPJ sob nº 05.232.644/0001-29 com sede no município de São Paulo, capital do
estado, a Av. Paulista, 1079 – 7º andar, e de agora em diante denominada simplesmente de Webnow. Este
Termo de Uso de Aplicativo rege o uso de todos os aplicativos disponibilizados gratuitamente pela Webnow
sejam para dispositivos móveis (Android, IOS, Windows Mobile), servidores, computadores pessoais (desktops)
ou serviços web. Se você não concordar com estes termos não use este aplicativo.
Você reconhece ainda que analisou e aceitou as condições de uso. Leia-as atentamente pois o uso deste
aplicativo significa que você aceitou todos os termos e concorda em cumpri-los. Se você, usuário, for menor de
idade ou declarado incapaz em quaisquer aspectos, precisará da permissão de seus pais ou responsáveis que
também deverão concordar com estes mesmos termos e condições.
2. LICENÇA LIMITADA
Você recebeu uma licença limitada, não transferível, não exclusiva, livre de royalties e revogável para baixar,
instalar, executar e utilizar este aplicativo em seu dispositivo. Você reconhece e concorda que a Webnow
concede ao usuário uma licença exclusiva para uso e desta forma não lhe transfere os direitos sobre o produto.
O aplicativo deverá ser utilizado por você, usuário. A venda, transferência, modificação, engenharia reversa ou
distribuição bem como a cópia de textos, imagens ou quaisquer partes nele contido é expressamente proibida.
3. ALTERAÇÕES, MODIFICAÇÕES E RESCISÃO
A Webnow reserva-se no direito de, a qualquer tempo, modificar estes termos seja incluindo, removendo ou
alterando quaisquer de suas cláusulas. Tais modificações terão efeito imediato. Após publicadas tais alterações,
ao continuar com o uso do aplicativo, você terá aceitado e concordado em cumprir os termos modificados.
A Webnow pode, de tempos em tempos, modificar ou descontinuar (temporária ou permanentemente) a
distribuição ou a atualização deste aplicativo.
A Webnow não é obrigada a fornecer nenhum serviço de suporte para este aplicativo.
O usuário não poderá responsabilizar a Webnow nem seus diretores, executivos, funcionários, afiliados, agentes,
contratados ou licenciadores por quaisquer modificações, suspensões ou descontinuidade do aplicativo.
CONSENTIMENTO PARA COLETA E USO DE DADOS
Você concorda que a Webnow pode coletar e usar dados técnicos de seu dispositivo tais como especificações,
configurações, versões de sistema operacional, tipo de conexão à internet e afins.
ISENÇÃO DE GARANTIAS E LIMITAÇÕES DE RESPONSABILIDADE
Este aplicativo estará em contínuo desenvolvimento e pode conter erros e, por isso, o uso é fornecido "no
estado em que se encontra" e sob risco do usuário final. Na extensão máxima permitida pela legislação aplicável
a Webnow e seus fornecedores isentam-se de quaisquer garantias e condições expressas ou implícitas incluindo,
sem limitação, garantias de comercialização, adequação a um propósito específico, titularidade e não violação no
que diz respeito ao aplicativo e qualquer um de seus componentes ou ainda à prestação ou não de serviços de
suporte. A Webnow não garante que a operação deste aplicativo seja contínua e sem defeitos.
Exceto pelo estabelecido neste documento não há outras garantias, condições ou promessas aos aplicativos,
expressas ou implícitas, e todas essas garantias, condições e promessas podem ser excluídas de acordo com o
que é permitido por lei sem prejuízo à Webnow e seus colaboradores.
I. A Webnow não garante, declara ou assegura que o uso deste aplicativo será ininterrupto ou livre de erros
e você concorda que a Webnow poderá remover por períodos indefinidos ou cancelar este aplicativo a qualquer
momento sem que você seja avisado.
II. A Webnow não garante, declara nem assegura que este aplicativo esteja livre de perda, interrupção,
ataque, vírus, interferência, pirataria ou outra invasão de segurança e isenta-se de qualquer responsabilidade em
relação à essas questões. Você é responsável pelo backup do seu próprio dispositivo.
III. Em hipótese alguma a Webnow, bem como seus diretores, executivos, funcionários, afiliadas, agentes,
contratados ou licenciadores responsabilizar-se-ão por perdas ou danos causados pelo uso do aplicativo.
iV. Os conteúdos transmitidos pelos aplicativos tais como a transmissão da programação de rádios AM, FM,
programações televisivas e afins são de responsabilidade de seus idealizadores. A Webnow isenta-se de qualquer
responsabilidade direta ou indireta sobre estes conteúdos e o acesso é facultativo ao usuário.</string>
    <string name="penas_azuis">Penas azuis</string>
</resources>